# riemer-doorbell

./: .gitignore  .gitmodules  index.ts  package-lock.json  readme.md
.github/workflows/: cmake.yml
cpp/: setup-gpio.sh
cpp/riemer-doorbell-cpp/: CMakeLists.txt  gpiopin.cpp  gpiopin.h  knownchats.cpp  knownchats.h  main.cpp
etc/: riemer-doorbell.service
riemer-doorbell-server/: CMakeLists.txt  gpiopin.cpp  gpiopin.h  knownchats.cpp  knownchats.h  main.cpp  sink-azure.cpp  sink-azure.h  sink-telegram.cpp  sink-telegram.h  sink.cpp  sink.h
typescript/: package.json  tsconfig.json
